1.Compiler/1.3.1.conditional_expressions/y.output
Terminaux inutilisés dans la grammaire

   tCOMMENT


État 15 conflits: 1 décalage/réduction


Grammaire

    0 $accept: entry_point $end

    1 entry_point: MainFunction

    2 MainFunction: tMAIN tPARO Args tPARF BodyFunction
    3             | tMAIN tPARO tPARF BodyFunction

    4 $@1: %empty

    5 BodyFunction: tACCO $@1 InBody tACCF

    6 $@2: %empty

    7 Body: tACCO $@2 Instructions tACCF

    8 InBody: Declarations Instructions
    9       | Declarations
   10       | Instructions

   11 Declarations: Declaration Declarations
   12             | Declaration

   13 Declaration: Type ListDecs tPV
   14            | Constante

   15 ListDecs: ListDec tVIRGULE ListDecs
   16         | ListDec

   17 ListDec: tID tEQU Exp
   18        | tID

   19 Constante: tCONST Type ListConstDecs tPV

   20 ListConstDecs: ListConstDec tVIRGULE ListConstDecs
   21              | ListConstDec

   22 ListConstDec: tID tEQU Exp

   23 Affectation: tID tEQU Exp tPV

   24 Instructions: Instruction Instructions
   25             | Instruction

   26 Instruction: Affectation
   27            | Print
   28            | If
   29            | While

   30 $@3: %empty

   31 Print: tPRINTF tPARO tID $@3 tPARF tPV

   32 ListIDs: tID tVIRGULE ListIDs
   33        | tID

   34 Args: Arg tVIRGULE Args
   35     | Arg

   36 Arg: Type ListIDs

   37 Type: tINT

   38 Exp: Exp tPLUS Exp
   39    | Exp tMINUS Exp
   40    | Exp tDIV Exp
   41    | Exp tMUL Exp
   42    | tNB
   43    | tID

   44 $@4: %empty

   45 If: tIF tPARO Exp tPARF $@4 Body

   46 $@5: %empty

   47 $@6: %empty

   48 While: tWHILE $@5 tPARO Exp tPARF $@6 Body


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tCONST (258) 19
tINT (259) 37
tMAIN (260) 2 3
tPRINTF (261) 31
tIF (262) 45
tWHILE (263) 48
tMUL (264) 41
tPLUS (265) 38
tMINUS (266) 39
tDIV (267) 40
tEQU (268) 17 22 23
tPARO (269) 2 3 31 45 48
tPARF (270) 2 3 31 45 48
tACCO (271) 5 7
tACCF (272) 5 7
tVIRGULE (273) 15 20 32 34
tPV (274) 13 19 23 31
tNB (275) 42
tID (276) 17 18 22 23 31 32 33 43
tCOMMENT (277)


Non-terminaux, suivis des règles où ils apparaissent

$accept (23)
    à gauche: 0
entry_point (24)
    à gauche: 1, à droite: 0
MainFunction (25)
    à gauche: 2 3, à droite: 1
BodyFunction (26)
    à gauche: 5, à droite: 2 3
$@1 (27)
    à gauche: 4, à droite: 5
Body (28)
    à gauche: 7, à droite: 45 48
$@2 (29)
    à gauche: 6, à droite: 7
InBody (30)
    à gauche: 8 9 10, à droite: 5
Declarations (31)
    à gauche: 11 12, à droite: 8 9 11
Declaration (32)
    à gauche: 13 14, à droite: 11 12
ListDecs (33)
    à gauche: 15 16, à droite: 13 15
ListDec (34)
    à gauche: 17 18, à droite: 15 16
Constante (35)
    à gauche: 19, à droite: 14
ListConstDecs (36)
    à gauche: 20 21, à droite: 19 20
ListConstDec (37)
    à gauche: 22, à droite: 20 21
Affectation (38)
    à gauche: 23, à droite: 26
Instructions (39)
    à gauche: 24 25, à droite: 7 8 10 24
Instruction (40)
    à gauche: 26 27 28 29, à droite: 24 25
Print (41)
    à gauche: 31, à droite: 27
$@3 (42)
    à gauche: 30, à droite: 31
ListIDs (43)
    à gauche: 32 33, à droite: 32 36
Args (44)
    à gauche: 34 35, à droite: 2 34
Arg (45)
    à gauche: 36, à droite: 34 35
Type (46)
    à gauche: 37, à droite: 13 19 36
Exp (47)
    à gauche: 38 39 40 41 42 43, à droite: 17 22 23 38 39 40 41 45
    48
If (48)
    à gauche: 45, à droite: 28
$@4 (49)
    à gauche: 44, à droite: 45
While (50)
    à gauche: 48, à droite: 29
$@5 (51)
    à gauche: 46, à droite: 48
$@6 (52)
    à gauche: 47, à droite: 48


État 0

    0 $accept: . entry_point $end

    tMAIN  décalage et aller à l'état 1

    entry_point   aller à l'état 2
    MainFunction  aller à l'état 3


État 1

    2 MainFunction: tMAIN . tPARO Args tPARF BodyFunction
    3             | tMAIN . tPARO tPARF BodyFunction

    tPARO  décalage et aller à l'état 4


État 2

    0 $accept: entry_point . $end

    $end  décalage et aller à l'état 5


État 3

    1 entry_point: MainFunction .

    $défaut  réduction par utilisation de la règle 1 (entry_point)


État 4

    2 MainFunction: tMAIN tPARO . Args tPARF BodyFunction
    3             | tMAIN tPARO . tPARF BodyFunction

    tINT   décalage et aller à l'état 6
    tPARF  décalage et aller à l'état 7

    Args  aller à l'état 8
    Arg   aller à l'état 9
    Type  aller à l'état 10


État 5

    0 $accept: entry_point $end .

    $défaut  accepter


État 6

   37 Type: tINT .

    $défaut  réduction par utilisation de la règle 37 (Type)


État 7

    3 MainFunction: tMAIN tPARO tPARF . BodyFunction

    tACCO  décalage et aller à l'état 11

    BodyFunction  aller à l'état 12


État 8

    2 MainFunction: tMAIN tPARO Args . tPARF BodyFunction

    tPARF  décalage et aller à l'état 13


État 9

   34 Args: Arg . tVIRGULE Args
   35     | Arg .

    tVIRGULE  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 35 (Args)


État 10

   36 Arg: Type . ListIDs

    tID  décalage et aller à l'état 15

    ListIDs  aller à l'état 16


État 11

    5 BodyFunction: tACCO . $@1 InBody tACCF

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 17


État 12

    3 MainFunction: tMAIN tPARO tPARF BodyFunction .

    $défaut  réduction par utilisation de la règle 3 (MainFunction)


État 13

    2 MainFunction: tMAIN tPARO Args tPARF . BodyFunction

    tACCO  décalage et aller à l'état 11

    BodyFunction  aller à l'état 18


État 14

   34 Args: Arg tVIRGULE . Args

    tINT  décalage et aller à l'état 6

    Args  aller à l'état 19
    Arg   aller à l'état 9
    Type  aller à l'état 10


État 15

   32 ListIDs: tID . tVIRGULE ListIDs
   33        | tID .

    tVIRGULE  décalage et aller à l'état 20

    tVIRGULE  [réduction par utilisation de la règle 33 (ListIDs)]
    $défaut  réduction par utilisation de la règle 33 (ListIDs)


État 16

   36 Arg: Type ListIDs .

    $défaut  réduction par utilisation de la règle 36 (Arg)


État 17

    5 BodyFunction: tACCO $@1 . InBody tACCF

    tCONST   décalage et aller à l'état 21
    tINT     décalage et aller à l'état 6
    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    InBody        aller à l'état 26
    Declarations  aller à l'état 27
    Declaration   aller à l'état 28
    Constante     aller à l'état 29
    Affectation   aller à l'état 30
    Instructions  aller à l'état 31
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    Type          aller à l'état 34
    If            aller à l'état 35
    While         aller à l'état 36


État 18

    2 MainFunction: tMAIN tPARO Args tPARF BodyFunction .

    $défaut  réduction par utilisation de la règle 2 (MainFunction)


État 19

   34 Args: Arg tVIRGULE Args .

    $défaut  réduction par utilisation de la règle 34 (Args)


État 20

   32 ListIDs: tID tVIRGULE . ListIDs

    tID  décalage et aller à l'état 15

    ListIDs  aller à l'état 37


État 21

   19 Constante: tCONST . Type ListConstDecs tPV

    tINT  décalage et aller à l'état 6

    Type  aller à l'état 38


État 22

   31 Print: tPRINTF . tPARO tID $@3 tPARF tPV

    tPARO  décalage et aller à l'état 39


État 23

   45 If: tIF . tPARO Exp tPARF $@4 Body

    tPARO  décalage et aller à l'état 40


État 24

   48 While: tWHILE . $@5 tPARO Exp tPARF $@6 Body

    $défaut  réduction par utilisation de la règle 46 ($@5)

    $@5  aller à l'état 41


État 25

   23 Affectation: tID . tEQU Exp tPV

    tEQU  décalage et aller à l'état 42


État 26

    5 BodyFunction: tACCO $@1 InBody . tACCF

    tACCF  décalage et aller à l'état 43


État 27

    8 InBody: Declarations . Instructions
    9       | Declarations .

    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 9 (InBody)

    Affectation   aller à l'état 30
    Instructions  aller à l'état 44
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    If            aller à l'état 35
    While         aller à l'état 36


État 28

   11 Declarations: Declaration . Declarations
   12             | Declaration .

    tCONST  décalage et aller à l'état 21
    tINT    décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 12 (Declarations)

    Declarations  aller à l'état 45
    Declaration   aller à l'état 28
    Constante     aller à l'état 29
    Type          aller à l'état 34


État 29

   14 Declaration: Constante .

    $défaut  réduction par utilisation de la règle 14 (Declaration)


État 30

   26 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 26 (Instruction)


État 31

   10 InBody: Instructions .

    $défaut  réduction par utilisation de la règle 10 (InBody)


État 32

   24 Instructions: Instruction . Instructions
   25             | Instruction .

    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    $défaut  réduction par utilisation de la règle 25 (Instructions)

    Affectation   aller à l'état 30
    Instructions  aller à l'état 46
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    If            aller à l'état 35
    While         aller à l'état 36


État 33

   27 Instruction: Print .

    $défaut  réduction par utilisation de la règle 27 (Instruction)


État 34

   13 Declaration: Type . ListDecs tPV

    tID  décalage et aller à l'état 47

    ListDecs  aller à l'état 48
    ListDec   aller à l'état 49


État 35

   28 Instruction: If .

    $défaut  réduction par utilisation de la règle 28 (Instruction)


État 36

   29 Instruction: While .

    $défaut  réduction par utilisation de la règle 29 (Instruction)


État 37

   32 ListIDs: tID tVIRGULE ListIDs .

    $défaut  réduction par utilisation de la règle 32 (ListIDs)


État 38

   19 Constante: tCONST Type . ListConstDecs tPV

    tID  décalage et aller à l'état 50

    ListConstDecs  aller à l'état 51
    ListConstDec   aller à l'état 52


État 39

   31 Print: tPRINTF tPARO . tID $@3 tPARF tPV

    tID  décalage et aller à l'état 53


État 40

   45 If: tIF tPARO . Exp tPARF $@4 Body

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 56


État 41

   48 While: tWHILE $@5 . tPARO Exp tPARF $@6 Body

    tPARO  décalage et aller à l'état 57


État 42

   23 Affectation: tID tEQU . Exp tPV

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 58


État 43

    5 BodyFunction: tACCO $@1 InBody tACCF .

    $défaut  réduction par utilisation de la règle 5 (BodyFunction)


État 44

    8 InBody: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 8 (InBody)


État 45

   11 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 11 (Declarations)


État 46

   24 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 24 (Instructions)


État 47

   17 ListDec: tID . tEQU Exp
   18        | tID .

    tEQU  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 18 (ListDec)


État 48

   13 Declaration: Type ListDecs . tPV

    tPV  décalage et aller à l'état 60


État 49

   15 ListDecs: ListDec . tVIRGULE ListDecs
   16         | ListDec .

    tVIRGULE  décalage et aller à l'état 61

    $défaut  réduction par utilisation de la règle 16 (ListDecs)


État 50

   22 ListConstDec: tID . tEQU Exp

    tEQU  décalage et aller à l'état 62


État 51

   19 Constante: tCONST Type ListConstDecs . tPV

    tPV  décalage et aller à l'état 63


État 52

   20 ListConstDecs: ListConstDec . tVIRGULE ListConstDecs
   21              | ListConstDec .

    tVIRGULE  décalage et aller à l'état 64

    $défaut  réduction par utilisation de la règle 21 (ListConstDecs)


État 53

   31 Print: tPRINTF tPARO tID . $@3 tPARF tPV

    $défaut  réduction par utilisation de la règle 30 ($@3)

    $@3  aller à l'état 65


État 54

   42 Exp: tNB .

    $défaut  réduction par utilisation de la règle 42 (Exp)


État 55

   43 Exp: tID .

    $défaut  réduction par utilisation de la règle 43 (Exp)


État 56

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   45 If: tIF tPARO Exp . tPARF $@4 Body

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69
    tPARF   décalage et aller à l'état 70


État 57

   48 While: tWHILE $@5 tPARO . Exp tPARF $@6 Body

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 71


État 58

   23 Affectation: tID tEQU Exp . tPV
   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69
    tPV     décalage et aller à l'état 72


État 59

   17 ListDec: tID tEQU . Exp

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 73


État 60

   13 Declaration: Type ListDecs tPV .

    $défaut  réduction par utilisation de la règle 13 (Declaration)


État 61

   15 ListDecs: ListDec tVIRGULE . ListDecs

    tID  décalage et aller à l'état 47

    ListDecs  aller à l'état 74
    ListDec   aller à l'état 49


État 62

   22 ListConstDec: tID tEQU . Exp

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 75


État 63

   19 Constante: tCONST Type ListConstDecs tPV .

    $défaut  réduction par utilisation de la règle 19 (Constante)


État 64

   20 ListConstDecs: ListConstDec tVIRGULE . ListConstDecs

    tID  décalage et aller à l'état 50

    ListConstDecs  aller à l'état 76
    ListConstDec   aller à l'état 52


État 65

   31 Print: tPRINTF tPARO tID $@3 . tPARF tPV

    tPARF  décalage et aller à l'état 77


État 66

   41 Exp: Exp tMUL . Exp

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 78


État 67

   38 Exp: Exp tPLUS . Exp

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 79


État 68

   39 Exp: Exp tMINUS . Exp

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 80


État 69

   40 Exp: Exp tDIV . Exp

    tNB  décalage et aller à l'état 54
    tID  décalage et aller à l'état 55

    Exp  aller à l'état 81


État 70

   45 If: tIF tPARO Exp tPARF . $@4 Body

    $défaut  réduction par utilisation de la règle 44 ($@4)

    $@4  aller à l'état 82


État 71

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   48 While: tWHILE $@5 tPARO Exp . tPARF $@6 Body

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69
    tPARF   décalage et aller à l'état 83


État 72

   23 Affectation: tID tEQU Exp tPV .

    $défaut  réduction par utilisation de la règle 23 (Affectation)


État 73

   17 ListDec: tID tEQU Exp .
   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 17 (ListDec)


État 74

   15 ListDecs: ListDec tVIRGULE ListDecs .

    $défaut  réduction par utilisation de la règle 15 (ListDecs)


État 75

   22 ListConstDec: tID tEQU Exp .
   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 22 (ListConstDec)


État 76

   20 ListConstDecs: ListConstDec tVIRGULE ListConstDecs .

    $défaut  réduction par utilisation de la règle 20 (ListConstDecs)


État 77

   31 Print: tPRINTF tPARO tID $@3 tPARF . tPV

    tPV  décalage et aller à l'état 84


État 78

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp
   41    | Exp tMUL Exp .

    $défaut  réduction par utilisation de la règle 41 (Exp)


État 79

   38 Exp: Exp . tPLUS Exp
   38    | Exp tPLUS Exp .
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp

    tMUL  décalage et aller à l'état 66
    tDIV  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 38 (Exp)


État 80

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   39    | Exp tMINUS Exp .
   40    | Exp . tDIV Exp
   41    | Exp . tMUL Exp

    tMUL  décalage et aller à l'état 66
    tDIV  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 39 (Exp)


État 81

   38 Exp: Exp . tPLUS Exp
   39    | Exp . tMINUS Exp
   40    | Exp . tDIV Exp
   40    | Exp tDIV Exp .
   41    | Exp . tMUL Exp

    $défaut  réduction par utilisation de la règle 40 (Exp)


État 82

   45 If: tIF tPARO Exp tPARF $@4 . Body

    tACCO  décalage et aller à l'état 85

    Body  aller à l'état 86


État 83

   48 While: tWHILE $@5 tPARO Exp tPARF . $@6 Body

    $défaut  réduction par utilisation de la règle 47 ($@6)

    $@6  aller à l'état 87


État 84

   31 Print: tPRINTF tPARO tID $@3 tPARF tPV .

    $défaut  réduction par utilisation de la règle 31 (Print)


État 85

    7 Body: tACCO . $@2 Instructions tACCF

    $défaut  réduction par utilisation de la règle 6 ($@2)

    $@2  aller à l'état 88


État 86

   45 If: tIF tPARO Exp tPARF $@4 Body .

    $défaut  réduction par utilisation de la règle 45 (If)


État 87

   48 While: tWHILE $@5 tPARO Exp tPARF $@6 . Body

    tACCO  décalage et aller à l'état 85

    Body  aller à l'état 89


État 88

    7 Body: tACCO $@2 . Instructions tACCF

    tPRINTF  décalage et aller à l'état 22
    tIF      décalage et aller à l'état 23
    tWHILE   décalage et aller à l'état 24
    tID      décalage et aller à l'état 25

    Affectation   aller à l'état 30
    Instructions  aller à l'état 90
    Instruction   aller à l'état 32
    Print         aller à l'état 33
    If            aller à l'état 35
    While         aller à l'état 36


État 89

   48 While: tWHILE $@5 tPARO Exp tPARF $@6 Body .

    $défaut  réduction par utilisation de la règle 48 (While)


État 90

    7 Body: tACCO $@2 Instructions . tACCF

    tACCF  décalage et aller à l'état 91


État 91

    7 Body: tACCO $@2 Instructions tACCF .

    $défaut  réduction par utilisation de la règle 7 (Body)
